--- a/demo.less
+++ b/demo.less
@@ -23,10 +23,10 @@ body {
     .button-size(60px, 12px 15px, 16px, 0);
 }
 .left-menu-separator {
-    border-left: 1px solid @gray-lighter !important;
+    border-left: 1px solid @black-10 !important;
 }
 .right-menu-separator {
-    border-right: 1px solid @gray-lighter !important;
+    border-right: 1px solid @black-10 !important;
 }
  
 .brand-title {
@@ -75,8 +75,7 @@ body {
             text-decoration: none; 
         }
     }
-    position: fixed;
-    
+    border-right: 1px solid @black-10;
 }
 
 .example {
