--- a/src/css/main.less
+++ b/src/css/main.less
@@ -13,12 +13,10 @@
 // form
 @import "./form.less";
 
-// Controls
+// Components
 @import "./input.less";
-@import "./divider.less";
 @import "./buttons.less";
 @import "./dropdown.less";
 @import "./menus.less";
 @import "./label.less";
 @import "./checkbox.less";
-@import "./tables.less";
