--- a/assets/main.css
+++ b/assets/main.css
@@ -739,13 +739,7 @@ h2,
 h3,
 h4,
 h5,
-h6,
-.h1,
-.h2,
-.h3,
-.h4,
-.h5,
-.h6 {
+h6 {
   font-family: "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "微软雅黑", SimHei, "黑体", STHeiti, "华文黑体", sans-serif;
   font-weight: bold;
   color: #453e2b;
@@ -756,53 +750,29 @@ h3 small,
 h4 small,
 h5 small,
 h6 small,
-.h1 small,
-.h2 small,
-.h3 small,
-.h4 small,
-.h5 small,
-.h6 small,
 h1 .small,
 h2 .small,
 h3 .small,
 h4 .small,
 h5 .small,
-h6 .small,
-.h1 .small,
-.h2 .small,
-.h3 .small,
-.h4 .small,
-.h5 .small,
-.h6 .small {
+h6 .small {
   font-weight: normal;
-  color: #333333;
+  color: #808080;
 }
 h1 small,
-.h1 small,
 h2 small,
-.h2 small,
 h3 small,
-.h3 small,
 h1 .small,
-.h1 .small,
 h2 .small,
-.h2 .small,
-h3 .small,
-.h3 .small {
+h3 .small {
   font-size: 65%;
 }
 h4 small,
-.h4 small,
 h5 small,
-.h5 small,
 h6 small,
-.h6 small,
 h4 .small,
-.h4 .small,
 h5 .small,
-.h5 .small,
-h6 .small,
-.h6 .small {
+h6 .small {
   font-size: 75%;
 }
 body {
@@ -812,11 +782,28 @@ body {
 p.indent {
   text-indent: 2em;
 }
-pre {
-  background: none repeat scroll 0 0 #e1f0de;
-  font-size: 75%;
-  font-weight: bold;
-  padding: 10px;
+code {
+  color: #b34e26;
+  white-space: nowrap;
+  border: 1px solid #cccccc;
+  border-radius: 3px;
+  background: #e6e6e6;
+  font-family: Consolas, Monaco, 'Andale Mono', monospace;
+  font-size: 12px;
+  padding: 0 0.3em;
+}
+pre code {
+  color: inherit;
+  white-space: inherit;
+  border: none;
+  background: none;
+  padding: 0;
+}
+.ui-divider,
+hr {
+  border-top: 1px solid #e6e6e6;
+  height: 0;
+  overflow: hidden;
 }
 .song {
   font-family: "Helvetica Neue", Helvetica, Arial, SimSun, "宋体", STSong, "华文宋体", sans-serif;
@@ -835,7 +822,13 @@ blockquote {
   margin: 0 1.5em 1.5em;
 }
 blockquote footer {
-  color: #777;
+  color: #808080;
+}
+dt {
+  font-weight: bold;
+}
+dd {
+  margin-left: 0;
 }
 a {
   color: #4d4d4d;
@@ -884,6 +877,61 @@ ol ol {
   display: -webkit-box;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
+}
+.ui-table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  empty-cells: show;
+  border: 1px solid #999999;
+}
+.ui-table caption {
+  text-align: center;
+  font-weight: bold;
+}
+.ui-table td,
+.ui-table th {
+  border-width: 0 0 0 1px;
+  margin: 0;
+  overflow: visible;
+  /*to make ths where the title is really long work*/
+}
+.ui-table thead {
+  text-align: left;
+}
+.ui-table caption {
+  color: #000000;
+}
+.ui-table td,
+.ui-table th {
+  border-left: 1px solid #999999;
+}
+.ui-table thead {
+  background: #e0e0e0;
+  color: #000000;
+}
+.ui-table.striped tr:nth-child(2n-1) td {
+  background-color: #f2f2f2;
+}
+.ui-table.bordered td {
+  border-bottom: 1px solid #999999;
+}
+.ui-table.horizontal th,
+.ui-table.horizontal td {
+  border-width: 0 0 1px 0;
+  border-bottom: 1px solid #999999;
+}
+.ui-table.hover-line > tbody > tr:hover > td,
+.ui-table.hover-line > tbody > tr:hover > th {
+  background-color: #e6e6e6;
+}
+.ui-table caption {
+  padding: 1em 0;
+}
+.ui-table td,
+.ui-table th {
+  font-size: inherit;
+  padding: 0.5em 1em;
+  /* cell padding */
 }
 /*!
 Pure v0.5.0
@@ -1519,13 +1567,6 @@ textarea:focus {
 }
 .ui-input.massive.with-icon.right .ui-icon {
   right: 0;
-}
-.ui-divider {
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
-  border-bottom: 1px solid rgba(255, 255, 255, 0.8);
-  height: 0;
-  line-height: 1;
-  overflow: hidden;
 }
 .ui-button {
   display: inline-block;
@@ -3386,81 +3427,4 @@ a.ui.teal.label:hover:before {
 .ui-toggle input:checked ~ label:after {
   left: 1.75em;
   background-color: #89B84C;
-}
-/*!
-Pure v0.5.0
-Copyright 2014 Yahoo! Inc. All rights reserved.
-Licensed under the BSD License.
-https://github.com/yui/pure/blob/master/LICENSE.md
-*/
-.ui-table {
-  /* Remove spacing between table cells (from Normalize.css) */
-  border-collapse: collapse;
-  border-spacing: 0;
-  empty-cells: show;
-  border: 1px solid #cbcbcb;
-}
-.ui-table caption {
-  color: #000;
-  font: italic 85%/1 arial, sans-serif;
-  padding: 1em 0;
-  text-align: center;
-}
-.ui-table td,
-.ui-table th {
-  border-left: 1px solid #cbcbcb;
-  /*  inner column border */
-  border-width: 0 0 0 1px;
-  font-size: inherit;
-  margin: 0;
-  overflow: visible;
-  /*to make ths where the title is really long work*/
-  padding: 0.5em 1em;
-  /* cell padding */
-}
-.ui-table td:first-child,
-.ui-table th:first-child {
-  border-left-width: 0;
-}
-.ui-table thead {
-  background: #e0e0e0;
-  color: #000;
-  text-align: left;
-  vertical-align: bottom;
-}
-/*
-striping:
-   even - #fff (white)
-   odd  - #f2f2f2 (light gray)
-*/
-.ui-table td {
-  background-color: transparent;
-}
-.ui-table-odd td {
-  background-color: #f2f2f2;
-}
-/* nth-child selector for modern browsers */
-.ui-table-striped tr:nth-child(2n-1) td {
-  background-color: #f2f2f2;
-}
-/* BORDERED TABLES */
-.ui-table-bordered td {
-  border-bottom: 1px solid #cbcbcb;
-}
-.ui-table-bordered tbody > tr:last-child td,
-.ui-table-horizontal tbody > tr:last-child td {
-  border-bottom-width: 0;
-}
-/* HORIZONTAL BORDERED TABLES */
-.ui-table-horizontal td,
-.ui-table-horizontal th {
-  border-width: 0 0 1px 0;
-  border-bottom: 1px solid #cbcbcb;
-}
-.ui-table-horizontal tbody > tr:last-child td {
-  border-bottom-width: 0;
-}
-.ui-table-hover > tbody > tr:hover > td,
-.ui-table-hover > tbody > tr:hover > th {
-  background-color: #f5f5f5;
 }
