--- a/src/css/variable.less
+++ b/src/css/variable.less
@@ -5,17 +5,17 @@
 @base-font-size: 16px;
 @text-color: @neutral-base-color;
 @body-color: @primary-bg-color;
+@body-line-height: 1.3;
 @default-border-radius: 4px;
 
 // padding
 @gutter: 10px;
 
-// 
-
 @default-padding: 10px 16px;
 
 // prefix config
 @ui-class-prefix: ui;
+@ui-variant-prefix: ;
 
 /* =========
    Type
@@ -97,10 +97,36 @@
    Type
    ========= */
 @hei-font: "Helvetica Neue", Helvetica, Arial, "Microsoft Yahei", "微软雅黑", SimHei, "黑体", STHeiti, "华文黑体", sans-serif;
-@headings-font-family: @hei-font;
+@song-font: "Helvetica Neue", Helvetica, Arial, SimSun, "宋体", STSong, "华文宋体", sans-serif;
+@fang-song-font: "Helvetica Neue", Helvetica, Arial, FangSong, "仿宋", STFangsong, "华文仿宋", sans-serif;
+@kai-font: "Helvetica Neue", Helvetica, Arial, KaiTi, "楷体", STKaiti, "华文楷体", sans-serif;
+
+@headings-font-family: @hei-font; 
 @headings-font-weight: bold;
 @headings-color: @neutral-shadow-color;
-@headings-small-color: #333;
+@headings-small-color: @black-50;
+
+@code-text-color: @energetic-shadow-color;
+@code-border-color: @black-20;
+@code-background-color: @black-10;
+@code-padding: 0 0.3em;
+
+@hr-color: @black-10;
+
+@quote-margin: 0 1.5em 1.5em;
+@quote-foot-text-color: @black-50;
+
+@table-border-color: @black-40;
+@table-caption-text-color: @black;
+@table-caption-font-size: @base-font-size;
+@table-caption-padding: 1em 0;
+@table-cell-padding: 0.5em 1em;
+@table-head-background-color: #e0e0e0;
+@table-head-text-color: #000;
+@table-hover-line-background-color: @black-10;
+@table-hover-line-text-color: @black;
+@table-striped-background-color: #f2f2f2;
+@table-striped-text-color: @black;
 
 /* =========
    Menu
